# process-monitor

./: .gitignore  Cargo.toml  README.md  build.ps1  help.txt
config_files/: help.txt  intro.txt  man.txt
files/: Cmds.txt  Commands.json
src/: app_args.rs  lib.rs  main.rs  test.js
src/models/: mod.rs  process_info.rs  system_info.rs
src/services/: mod.rs  process.rs  system.rs
src/utils/: app_args.rs  mod.rs  process.rs  system.rs  user_cmds.rs
text_files/: help.txt  intro.txt
