[package]
name = "process_monitor"
version = "0.1.0"
edition = "2021"
authors = ["Euna Islam <euna.islam@gmail.com>"]
license = "Apache-2.0"
description = "A simple process monitor"
readme = "README.md"
homepage = "https://github.com/Euna-Islam/process-monitor"
repository = "https://github.com/Euna-Islam/process-monitor"


[dependencies]
exitcode = "1.1.2"
sysinfo="0.29.10"
